# classes_stuff

./: README.md
idmind_msgs/: CMakeLists.txt  README.MD  package.xml
idmind_msgs/action/: NavControl.action
idmind_msgs/msg/: Bumpers.msg  ClosestObstacles.msg  Encoders.msg  HubMotorState.msg  Leds.msg  Log.msg  Obstacles.msg  SystemStatus.msg  Voltages.msg
idmind_msgs/srv/: CreateTask.srv
joy/: CMakeLists.txt  package.xml
joy/launch/: idmind_teleop.launch
joy/src/: joy_controller.py
launch/: frames.launch  ign_x1.launch  octomap_server.launch
models/: model.sdf
src/: CMakeLists.txt
world/: basic_world.world  lispolis_simul.world
