<?xml version="1.0"?>
<package format="2">
  <name>idmind_msgs</name>
  <version>0.0.0</version>
  <description>The idmind_msgs package</description>

  <maintainer email="henrique@todo.todo">henrique</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>actionlib_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
